--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <input class="input--style-3" type="text" placeholder="WhatsApp Number" name="whatsappNumber" required>
                         </div>
                         <div class="input-group">
-                            <input class="input--style-3" type="text" placeholder="Question? (Optional)" name="breastfeedingQuestion">
+                            <input class="input--style-3" type="text" placeholder="Post Your Question? (Optional)" name="breastfeedingQuestion">
                              
                         </div>
                         <div class="p-t-10">
